--- a/templates/home.html
+++ b/templates/home.html
@@ -10,8 +10,12 @@
       Join our community, subscribe to expert plans, and shop premium fitness gear.
     </p>
     <div>
-      <a class="btn btn-primary btn-lg me-2" href="{% url 'subscriptions:plan_list' %}">View Plans</a>
-      <a class="btn btn-outline-light btn-lg" href="{% url 'store:product_list' %}">Shop Products</a>
+      <a class="btn btn-primary btn-lg me-2" href="{% url 'subscriptions:plan_list' %}">
+        <i class="fa-solid fa-dumbbell me-1"></i>View Plans
+      </a>
+      <a class="btn btn-outline-light btn-lg" href="{% url 'store:product_list' %}">
+        <i class="fa-solid fa-bag-shopping me-1"></i>Shop Products
+      </a>
     </div>
   </div>
 </div>
