--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,8 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
+  <!-- Font Awesome -->
+  <script src="https://kit.fontawesome.com/2cbcb14f94.js" crossorigin="anonymous"></script>
   <!-- Custom CSS -->
   <link href="{% static 'css/main.css' %}" rel="stylesheet" />
 </head>
