--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -4,7 +4,7 @@
 <div class="row">
   <div class="col-md-6">
     {% if product.image %}
-      <img src="{{ product.image.url }}" class="img-fluid" alt="{{ product.name }}">
+      <img src="{{ product.image.url }}" class="product-detail-img" alt="{{ product.name }}">
     {% endif %}
   </div>
   <div class="col-md-6">
