--- a/store/templates/store/product_list.html
+++ b/store/templates/store/product_list.html
@@ -4,7 +4,7 @@
 <h2>Our Products</h2>
 <div class="row">
   {% for product in products %}
-    <div class="col-md-4 mb-4">
+    <div class="col-6 col-md-4 mb-4">
       <div class="card h-100">
         {% if product.image %}
           <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
