--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -7,7 +7,7 @@
       <img src="{{ product.image.url }}" class="product-detail-img" alt="{{ product.name }}">
     {% else %}
       <a href="">
-          <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+        <img src="/media/products/{{ product.id }}.jpg" class="product-detail-img" alt="{{ product.name }}">
       </a>
     {% endif %}
   </div>
