--- a/templates/base.html
+++ b/templates/base.html
@@ -64,12 +64,10 @@
 <footer class="footer bg-dark text-white mt-5 pt-4 pb-3">
   <div class="container">
     <div class="row align-items-center justify-content-between gy-3">
-      <div class="col-12 col-md-4 text-center text-md-start">
+      <div class="col-12 col-md-4 text-center text-md-start mb-2 mb-md-0">
         <span class="fw-bold">© {{ current_year }} FitLife Hub</span>
       </div>
-      <div class="col-12 col-md-4 text-center my-2 my-md-0">
-        <a href="/robots.txt" class="text-white-50 me-3">robots.txt</a>
-        <a href="/sitemap.xml" class="text-white-50 me-3">sitemap.xml</a>
+      <div class="col-12 col-md-4 text-center mb-2 mb-md-0">
         <a href="{% url 'home' %}" class="text-white-50">Home</a>
       </div>
       <div class="col-12 col-md-4 text-center text-md-end">
