--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,12 @@
   <script src="https://kit.fontawesome.com/2cbcb14f94.js" crossorigin="anonymous"></script>
   <!-- Custom CSS -->
   <link href="{% static 'css/main.css' %}" rel="stylesheet" />
+  <!-- filepath: templates/base.html -->
+  <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
+  <link rel="manifest" href="{% static 'favicon/site.webmanifest' %}">
+  <link rel="shortcut icon" href="{% static 'favicon/favicon.ico' %}">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
