--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,9 @@
             <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">Login</a></li>
           {% endif %}
+          {% if request.user.is_staff %}
+            <li class="nav-item"><a class="nav-link" href="{% url 'store:admin_dashboard' %}">Admin Dashboard</a></li>
+          {% endif %}
         </ul>
       </div>
     </div>
