--- a/store/templates/store/review_form.html
+++ b/store/templates/store/review_form.html
@@ -5,6 +5,6 @@
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit" class="btn btn-success">Save</button>
-  <a href="{% url 'store:product_detail' review.product.pk %}" class="btn btn-secondary">Cancel</a>
+  <a href="{% url 'store:product_detail' product.pk %}" class="btn btn-secondary">Cancel</a>
 </form>
 {% endblock %}
