add: history order

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,6 +46,7 @@
           <li class="nav-item"><a class="nav-link" href="{% url 'store:cart' %}">Cart</a></li>
           {% if user.is_authenticated %}
             <li class="nav-item"><a class="nav-link" href="{% url 'users:profile' %}">{{ user.username }}</a></li>
+            <li class="nav-item"><a class="nav-link" href="{% url 'store:order_history' %}">Orders</a></li>
             <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Logout</a></li>
           {% else %}
             <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a></li>
